src/test/deca/context/invalid/sansObjet/NoDeclarationFloat.deca
{
    int x =2020;
    float = 2020.5f;
}